--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PersonNotes</string>
+    <string name="name_project">Person Notes</string>
+    <string name="to_enter">Entrar</string>
+    <string name="register">Registrar</string>
 </resources>
